Customed devise login view

--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -6,6 +6,12 @@
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+    <style>
+      body { background-color: #DADADA; }
+      body > .grid { height: 100%; }
+      .image { margin-top: -100px; }
+      .column { max-width: 450px; }
+    </style>
   </head>
 
   <body>
