--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,13 +6,24 @@
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+    <style>
+      body { background-color: #FFFFFF; }
+      .ui.menu .item img.logo { margin-right: 1.5em; }
+      .main.container { margin-top: 7em; }
+      .wireframe { margin-top: 2em; }
+      .ui.footer.segment {
+        margin: 5em 0em 0em;
+        padding: 5em 0em;
+      }
+    </style>
   </head>
 
   <body>
 
     <%= render 'layouts/nav' %>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-    <%= yield %>
+    <%= render 'layouts/flash' %>
+    <div class="ui main text container">
+      <%= yield %>
+    </div>
   </body>
 </html>
