--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -3,10 +3,12 @@
   <div class="ui container">
     <a href="#" class="header item">
       <%= image_tag "logo.png", class: "logo" %>
-      かりる
+      Scissors
     </a>
     <a href="#" class="ui simple dropdown item">かす</a>
-    <div class="right menu">
+    <a href="#" class="ui simple dropdown item">かりる</a>
+    <div class="ui right item">
+      <i class="power off icon"></i>
       <%= link_to "ログアウト", :destroy_user_session, method: :delete %>
     </div>
   </div>
