--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,29 +1,37 @@
-
 <div class="ui middle aligned center aligned grid">
   <div class="column">
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <h2 class="ui teal image header">
+      <%= image_tag "logo.png", class: "image" %>
+      <div class="content">Scissorsに登録</div>
+    </h2>
+
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: "ui large form"}) do |f| %>
+
       <%= devise_error_messages! %>
 
-      <div class="field">
-        <%= f.label :email %><br />
-        <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      <div class="ui stacked segment">
+        <div class="field">
+          <div class="ui left icon input">
+            <i class="user icon"></i>
+            <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Eメール" %>
+        </div>
       </div>
 
-      <div class="field">
-        <%= f.label :password %>
-        <% if @minimum_password_length %>
-        <em>(<%= @minimum_password_length %> characters minimum)</em>
-        <% end %><br />
-        <%= f.password_field :password, autocomplete: "off" %>
-      </div>
+        <div class="field">
+          <div class="ui left icon input">
+            <i class="lock icon"></i>
+            <%= f.password_field :password, autocomplete: "off", placeholder: "パスワード(#{@minimum_password_length}文字以上)" %>
+          </div>
+        </div>
 
-      <div class="field">
-        <%= f.label :password_confirmation %><br />
-        <%= f.password_field :password_confirmation, autocomplete: "off" %>
-      </div>
+        <div class="field">
+          <div class="ui left icon input">
+            <i class="lock icon"></i>
+            <%= f.password_field :password_confirmation, autocomplete: "off", placeholder: "パスワード確認" %>
+          </div>
+        </div>
 
-      <div class="actions">
-        <%= f.submit "Sign up" %>
+        <%= f.submit "登録", class: "ui fluid large teal submit button actions" %>
       </div>
     <% end %>
 
