--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Scissors</title>
-    <%= csrf_meta_tags %>
+<head>
+  <title>Scissors</title>
+  <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag    'application', media: 'all' %>
-    <%= javascript_include_tag 'application' %>
-    <style>
-      body { background-color: #FFFFFF; }
-      .ui.menu .item img.logo { margin-right: 1.5em; }
-      .main.container { margin-top: 7em; }
-      .wireframe { margin-top: 2em; }
-      .ui.footer.segment {
-        margin: 5em 0em 0em;
-        padding: 5em 0em;
-      }
-    </style>
-  </head>
+  <%= stylesheet_link_tag    'application', media: 'all' %>
+  <%= javascript_include_tag 'application' %>
+  <meta name="viewport" content="width=device-whidth, initial-scale=1.0">
+  <style>
+    body { background-color: #FFFFFF; }
+    .ui.menu .item img.logo { margin-right: 1.5em; }
+    .main.container { margin-top: 7em; }
+    .wireframe { margin-top: 2em; }
+    .ui.footer.segment {
+      margin: 5em 0em 0em;
+      padding: 5em 0em;
+    }
+  </style>
+</head>
 
-  <body>
+<body>
 
-    <%= render 'layouts/nav' %>
-    <%= render 'layouts/flash' %>
-    <div class="ui main text container">
-      <%= yield %>
-    </div>
-  </body>
+  <%= render 'layouts/nav' %>
+  <%= render 'layouts/flash' %>
+  <div class="ui main text container">
+    <%= yield %>
+  </div>
+</body>
 </html>
