--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Scissors</title>
-    <%= csrf_meta_tags %>
+<head>
+  <title>Scissors</title>
+  <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag    'application', media: 'all' %>
-    <%= javascript_include_tag 'application' %>
-    <style>
-      body { background-color: #DADADA; }
-      body > .grid { height: 100%; }
-      .image { margin-top: -100px; }
-      .column { max-width: 450px; }
-    </style>
-  </head>
+  <%= stylesheet_link_tag    'application', media: 'all' %>
+  <%= javascript_include_tag 'application' %>
+  <meta name="viewport" content="width=device-whidth, initial-scale=1.0">
+  <style>
+    body { background-color: #DADADA; }
+    body > .grid { height: 100%; }
+    .image { margin-top: -100px; }
+    .column { max-width: 450px; }
+  </style>
+</head>
 
-  <body>
+<body>
 
-    <%= render 'layouts/flash' %>
-    <%= yield %>
-  </body>
+  <%= render 'layouts/flash' %>
+  <%= yield %>
+</body>
 </html>
