--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -1,9 +1,11 @@
 <style>
   .message.closable {
     position: absolute;
-    top: 50px;
-    left: 20%;
-    right: 20%;
+    top: 60px;
+    left: 0;
+    right: 0;
+    max-width: 450px;
+    margin: auto;
   }
 </style>
 <% flash.each do |key, value| %>
