--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,2 +1,35 @@
+<div class="ui grid">
+  <div class="row">
+    <div class="column padding-reset">
+      <div class="ui huge message page grid" style="background-size:cover;background-position: 0 -120%; background-image:url(<%= asset_path "car2.jpg" %>) ">
+        <h1 class="ui huge header">Enjoy Drive!</h1>
+        <div style="height: 300px;"></div>
+      </div>
+    </div>
+  </div>
+</div>
 
-<h1><%= @message %></h1>
+<div class="ui hidden divider"></div>
+
+<div class="ui page grid">
+  <div class="two column row">
+    <div class="column">
+      <h2 class="ui header">教えたい・貸したい方</h2>
+      <p></p>
+      <button class="ui tiny button m-top-10">詳しく見る</button>
+    </div>
+    <div class="column">
+      <h2 class="ui header">教わりたい・借りたい方</h2>
+      <p></p>
+      <button class="ui tiny button m-top-10">詳しく見る</button>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="column">
+      <div class="ui divider"></div>
+      <span>© Meaters 2018</span>
+    </div>
+  </div>
+  <div class="ui hidden divider"></div>
+</div>
