--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,12 +1,10 @@
 
-<div class="ui fixed inverted menu">
+<div class="ui fixed inverted menu grid page navbar">
   <div class="ui container">
     <a href="#" class="header item">
       <%= image_tag "logo.png", class: "logo" %>
       Scissors
     </a>
-    <a href="#" class="ui simple dropdown item">かす</a>
-    <a href="#" class="ui simple dropdown item">かりる</a>
     <div class="ui right item">
       <i class="power off icon"></i>
       <%= link_to "ログアウト", :destroy_user_session, method: :delete %>
