--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -14,12 +14,14 @@
 <div class="ui page grid">
   <div class="two column row">
     <div class="column">
-      <h2 class="ui header">教えたい・貸したい方</h2>
-      <p></p>
+      <h2 class="ui header">貸したい・教えたい方</h2>
+      <p>車を持っていて、車を貸したい方。車を貸してちょっとリッチなご飯でも食べませんか？</p>
+      <p>ただ貸すだけではなくあなたに助手席に乗っていただくので知らない人が自分の車でどこか知らないところを運転している、という不安もありません。</p>
+      <p>もしあなたが運転が得意だというのなら、初心者や久しぶりに運転する人に教えてみるのもいいかもしれません。</p>
       <button class="ui tiny button m-top-10">詳しく見る</button>
     </div>
     <div class="column">
-      <h2 class="ui header">教わりたい・借りたい方</h2>
+      <h2 class="ui header">借りたい・教わりたい方</h2>
       <p></p>
       <button class="ui tiny button m-top-10">詳しく見る</button>
     </div>
