--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -18,12 +18,12 @@
       <p>車を持っていて、車を貸したい方。車を貸してちょっとリッチなご飯でも食べませんか？</p>
       <p>ただ貸すだけではなくあなたに助手席に乗っていただくので知らない人が自分の車でどこか知らないところを運転している、という不安もありません。</p>
       <p>もしあなたが運転が得意だというのなら、初心者や久しぶりに運転する人に教えてみるのもいいかもしれません。</p>
-      <button class="ui tiny button m-top-10">詳しく見る</button>
+      <%= link_to "詳しく見る", :tutor, class: "ui tiny button m-top-10" %>
     </div>
     <div class="column">
       <h2 class="ui header">借りたい・教わりたい方</h2>
       <p></p>
-      <button class="ui tiny button m-top-10">詳しく見る</button>
+      <%= link_to "詳しく見る", :student, class: "ui tiny button m-top-10" %>
     </div>
   </div>
 
