--- a/app/views/dashboard/tutor.html.erb
+++ b/app/views/dashboard/tutor.html.erb
@@ -8,6 +8,28 @@
       </div>
     </div>
   </div>
+
+  <div class="ui card">
+    <div class="image">
+      <% if @current_user.gender.nil? %>
+        <%= image_tag "no-gender.jpg" %>
+      <% else%>
+        <%= image_tag "#{@current_user.gender == 0 ? "male" : "female"}.png" %>
+      <% end %>
+    </div>
+    <div class="content">
+      <a class="header"><%= @current_user.name ? @current_user.name : "名前未設定" %></a>
+      <div class="meta">
+        <span class="date"><%= @current_user.gender_jp %></span>
+      </div>
+      <div class="description"><%= @current_user.region_jp %></div>
+    </div>
+    <div class="extra content">
+      <a>
+        <i class="user icon"></i>
+        <%# 22 Friends %>
+      </a>
+    </div>
+  </div>
+
 </div>
-
-
