--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -22,7 +22,9 @@
     </div>
     <div class="column">
       <h2 class="ui header">借りたい・教わりたい方</h2>
-      <p></p>
+      <p>免許を取ったけど車を持っていない方。レンタカーより安く、そして安全に運転の練習をしませんか？</p>
+      <p>先輩ドライバーに教えてもらいながら運転できるので、気軽に運転できます。</p>
+      <p>また、一人での運転が心細い方やちょっとした時間だけ借りたい方も、安全に安価で車を運転することができます。</p>
       <%= link_to "詳しく見る", :student, class: "ui tiny button m-top-10" %>
     </div>
   </div>
