--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -5,7 +5,7 @@
       <div class="example">
 
         <%= form_with model: @user, local: true, class: "ui form" do |f| %>
-          <%= f.hidden_field :page, value: 'tutor' %>
+          <%= f.hidden_field :page, value: @page %>
           <div class="field">
             <label>名前</label>
             <%= f.text_field :name, placeholder: "はさみ 太郎" %>
