--- a/app/views/dashboard/tutor.html.erb
+++ b/app/views/dashboard/tutor.html.erb
@@ -18,14 +18,13 @@
             <%= image_tag "car_s.png" %>
           </div>
           <div class="content">
-            <a class="header"><%= @current_user.name ? @current_user.name : "名前未設定" %></a>
+            <a class="header"><%= @car.name_jp %></a>
             <div class="meta">
-              <span class="date"><%= @current_user.gender_jp %></span>
+              <span class="date">満期日:<%= @car.maturity_jp %></span>
             </div>
-            <div class="description"><%= @current_user.region_jp %></div>
           </div>
           <div class="extra content">
-            <%= link_to :root do %>
+            <%= link_to [:new, :car] do %>
               <i class="user icon"></i> 編集
             <% end %>
           </div>
