--- a/app/views/cars/new.html.erb
+++ b/app/views/cars/new.html.erb
@@ -7,7 +7,7 @@
         <%= form_with model: @car, local: true, class: "ui form" do |f| %>
           <%= hidden_field_tag :user_id, value: @current_user.id %>
           <div class="field">
-            <label>車両番号</label>
+            <label>車両管理番号</label>
             <%= text_field_tag :plate_number, '', placeholder: "1028" %>
           </div>
           <%= f.submit "設定", class: "ui button" %>
