--- a/app/views/dashboard/tutor.html.erb
+++ b/app/views/dashboard/tutor.html.erb
@@ -3,8 +3,8 @@
   <div class="row">
     <div class="column">
       <div class="ui huge message page grid center aligned">
-        <h1 class="ui huge header">プロフィール登録</h1>
-        <p>貸すことができる車、あなたの情報を登録してください。</p>
+        <h2 class="ui huge header">プロフィール登録</h2>
+        <p>貸すことができる自動車、あなたの情報を登録してください。</p>
       </div>
     </div>
   </div>
@@ -33,6 +33,15 @@
     </div>
 
     <%= render 'user_card', page: :tutor %>
+  </div>
+
+  <div class="row">
+    <div class="column">
+      <div class="ui huge message page grid center aligned">
+        <h2 class="ui huge header">日付登録</h2>
+        <p>自動車を貸すことができる日付、時間帯を設定してください。</p>
+      </div>
+    </div>
   </div>
 
 </div>
