Added footer module and table

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -29,11 +29,5 @@
     </div>
   </div>
 
-  <div class="row">
-    <div class="column">
-      <div class="ui divider"></div>
-      <span>© Meaters 2018</span>
-    </div>
-  </div>
-  <div class="ui hidden divider"></div>
+  <%= render 'layouts/footer' %>
 </div>
