--- a/app/views/dashboard/tutor.html.erb
+++ b/app/views/dashboard/tutor.html.erb
@@ -44,4 +44,35 @@
     </div>
   </div>
 
+  <table class="ui celled padded table">
+    <thead>
+      <tr>
+        <th class="single line">貸出可能日</th>
+        <th>時間帯</th>
+        <th>貸出時間</th>
+        <th>設定料金</th>
+        <th>実績</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>
+          <h2 class="ui center aligned header">A</h2>
+        </td>
+        <td class="single line">
+          Power Output
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <h2 class="ui center aligned header">A</h2>
+        </td>
+        <td class="single line">
+          Weight
+        </td>
+      </tr>
+    </tbody>
+  </table>
+
+  <%= render 'layouts/footer'%>
 </div>
