--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -18,14 +18,14 @@
       <p>車を持っていて、車を貸したい方。車を貸してちょっとリッチなご飯でも食べませんか？</p>
       <p>ただ貸すだけではなくあなたに助手席に乗っていただくので知らない人が自分の車でどこか知らないところを運転している、という不安もありません。</p>
       <p>もしあなたが運転が得意だというのなら、初心者や久しぶりに運転する人に教えてみるのもいいかもしれません。</p>
-      <%= link_to "詳しく見る", :tutor, class: "ui tiny button m-top-10" %>
+      <%= link_to "貸す・教える", :tutor, class: "ui primary button m-top-10" %>
     </div>
     <div class="column">
       <h2 class="ui header">借りたい・教わりたい方</h2>
       <p>免許を取ったけど車を持っていない方。レンタカーより安く、そして安全に運転の練習をしませんか？</p>
       <p>先輩ドライバーに教えてもらいながら運転できるので、気軽に運転できます。</p>
       <p>また、一人での運転が心細い方やちょっとした時間だけ借りたい方も、安全に安価で車を運転することができます。</p>
-      <%= link_to "詳しく見る", :student, class: "ui tiny button m-top-10" %>
+      <%= link_to "借りる・教わる", :student, class: "ui primary button m-top-10" %>
     </div>
   </div>
 
