--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="column padding-reset">
       <div class="ui huge message page grid" style="background-size:cover;background-position: 0 -120%; background-image:url(<%= asset_path "car2.jpg" %>) ">
-        <h1 class="ui huge header">Enjoy Drive!</h1>
+        <h1 class="ui huge header" style="font-size:48px;color:black;">Enjoy Drive!</h1>
         <div style="height: 300px;"></div>
       </div>
     </div>
