Added button to add opp

--- a/app/views/dashboard/tutor.html.erb
+++ b/app/views/dashboard/tutor.html.erb
@@ -76,6 +76,9 @@
       <% end %>
     </tbody>
   </table>
+  <div class="row">
+    <%= link_to "追加する", nil, class: "ui primary button right" %>
+  </div>
 
   <%= render 'layouts/footer'%>
 </div>
