--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,3 +25,8 @@
   text-align: center;
 }
 h2.ui.header { margin-bottom: 20px !important; }
+
+.ui.page.grid {
+  margin: auto;
+  text-align: center;
+}
