--- a/app/views/cars/new.html.erb
+++ b/app/views/cars/new.html.erb
@@ -5,12 +5,12 @@
       <div class="example">
 
         <%= form_with model: @car, local: true, class: "ui form" do |f| %>
-          <%= hidden_field_tag :user_id, value: @current_user.id %>
+          <%= hidden_field_tag :user_id, @current_user.id %>
           <div class="field">
             <label>車両管理番号</label>
             <%= text_field_tag :plate_number, '', placeholder: "1028" %>
           </div>
-          <%= f.submit "設定", class: "ui button" %>
+          <%= f.submit "設定", class: "ui button primary" %>
         <% end %>
 
       </div>
