--- a/app/views/dashboard/student.html.erb
+++ b/app/views/dashboard/student.html.erb
@@ -13,5 +13,37 @@
     <%= render 'user_card', page: :student %>
   </div>
 
+  <div class="row">
+    <div class="column">
+      <div class="ui huge message page grid center aligned">
+        <h1 class="ui huge header">自動車・メンターを探す</h1>
+        <p>検索をして借りることができる自動車や教えてくれるメンターを探しましょう。</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="example">
+
+      <%= form_with url: [:search, :opportunities], class: "ui form" do |f| %>
+        <div class="field">
+          <label>名前</label>
+          <%= f.text_field :name, placeholder: "はさみ 太郎" %>
+        </div>
+        <div class="field">
+          <label>性別</label>
+          <%= f.select :gender, [["男性", 0], ["女性", 1]], {}, {class: "ui dropdown"} %>
+        </div>
+        <div class="field">
+          <label>地域</label>
+          <%= f.text_field :region, placeholder: "東京都" %>
+        </div>
+
+        <%= f.submit "検索", class: "ui button primary" %>
+      <% end %>
+
+    </div>
+  </div>
+
   <%= render 'layouts/footer' %>
 </div>
