--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -19,7 +19,7 @@
             <%= f.text_field :region, placeholder: "東京都" %>
           </div>
 
-          <%= f.submit "設定", class: "ui button" %>
+          <%= f.submit "設定", class: "ui button primary" %>
         <% end %>
 
       </div>
