--- a/app/views/dashboard/student.html.erb
+++ b/app/views/dashboard/student.html.erb
@@ -23,20 +23,22 @@
   </div>
 
   <div class="row">
-    <div class="example">
+    <div class="example" style="margin:0 auto;">
 
-      <%= form_with url: [:search, :opportunities], class: "ui form" do |f| %>
+      <%= form_with url: [:search, :opportunities], local: true, class: "ui form" do |f| %>
         <div class="field">
-          <label>名前</label>
-          <%= f.text_field :name, placeholder: "はさみ 太郎" %>
+          <label>日にち</label>
+          <%= f.select :date, [["今日", 0], ["3日以内", 3], ["1週間以内", 7], ["2週間以内", 14], ["1ヶ月以内", 30]], {}, {class: "ui dropdown"} %>
         </div>
-        <div class="field">
-          <label>性別</label>
-          <%= f.select :gender, [["男性", 0], ["女性", 1]], {}, {class: "ui dropdown"} %>
-        </div>
+
         <div class="field">
           <label>地域</label>
           <%= f.text_field :region, placeholder: "東京都" %>
+        </div>
+
+        <div class="field">
+          <label>自動車名称</label>
+          <%= f.text_field :region, placeholder: "フリード" %>
         </div>
 
         <%= f.submit "検索", class: "ui button primary" %>
