--- a/app/views/cars/new.html.erb
+++ b/app/views/cars/new.html.erb
@@ -1,4 +1,4 @@
-
+<div class="ui hidden divider"></div>
 <div class="ui page grid" style="margin-top: 1em;">
   <div class="ui page grid">
     <div class="row">
