--- a/app/views/dashboard/tutor.html.erb
+++ b/app/views/dashboard/tutor.html.erb
@@ -1,4 +1,4 @@
-
+<div class="ui hidden divider"></div>
 <div class="ui page grid">
   <div class="row">
     <div class="column">
@@ -51,7 +51,7 @@
         <th>時間帯</th>
         <th>貸出時間</th>
         <th>設定料金</th>
-        <th>実績</th>
+        <th>予約状況</th>
       </tr>
     </thead>
     <tbody>
