--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -5,6 +5,8 @@
       <div class="content">Scissorsに登録</div>
     </h2>
 
+    <p>デモ用のため、登録してもメールは送信されません。</p>
+
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: "ui large form"}) do |f| %>
 
       <%= devise_error_messages! %>
